# UpAndDown

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  github-best-practices.skill  karpathy-coding.skill  marimo-notebook.skill  model-evaluation.skill  prior-elicitation.skill  pymc-extras.skill  pymc-modeling.skill  pymc-testing.skill  upanddown-build-plan-v0.2-addendum.md  upanddown-build-plan.md
golf-trading/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  agent.md  pyproject.toml
golf-trading/config/: .env.example  books.yaml  settings.yaml
golf-trading/docs/: agent-execution-plan.md  backtest-artifact-runbook.md  daily-betting-runbook.html  forecast-backed-market-expansion-spec.md  paper-trading-phase3-proof-runbook.md  prediction-market-mm-spec.md  shadow-live-runbook.md  splash-api-discovery.md  splash-bulletproof-plan.md
golf-trading/scripts/: artifact_bundle.py  backtest_replay.py  backtest_review.py  build_rungood_splash_lineup_card.py  build_splash_datagolf_rank_fixture.py  build_splash_enriched_score_anchors.py  build_splash_lineup_card.py  build_splash_proxy_score_anchors.py  build_splash_score_anchor_todo.py  capture_datagolf_splash_enrichment.py  capture_splash_contest.py  discover_splash_contests.py  evaluate_splash_lobby.py  export_control_plane_status.py  generate_rungood_splash_portfolios.py  generate_splash_portfolios.py  init_db.py  mm_simulate.py  operator_console.py  paper_trade.py  phase_gate_check.py  run_pipeline.py  run_rungood_splash_sensitivity.py  run_splash_sensitivity.py  run_splash_week.py  run_splash_workflow.py  (+2 more)
(+186 files in other folders)
